Actual fix of .postpage overflowing container

--- a/src/css/layout/_postpage.scss
+++ b/src/css/layout/_postpage.scss
@@ -1,7 +1,7 @@
 .postpage {
   box-sizing: border-box;
+  width: 100%;
   max-width: 50em;
   padding: 3em 5%;
-  margin: 0 auto;
-  flex-wrap: wrap;
+  align-self: center;
 }
